test/classes/diten/newFnCall.good
newFnCall.chpl:4: error: operator 'new' can only be applied to a constructor
