test/classes/diten/newFnCall.future
bug: using 'new' on a function call causes an INT_FATAL during codegen

This test should result in a compiler error about using 'new' on a
non-constructor, but it causes an internal error instead.
